<resources>
    <string name="app_name">EZEats</string>
    <string name="hello_home">Hi, name!</string>
    <string name="subtitle_home">What do you want to cook today?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="saved">Saved</string>
    <string name="account">Account</string>
    <string name="trending">Trending recipes</string>
    <string name="name_recipe">Nama Resep</string>
    <string name="desc_recipe">Deskripsi atau ingredients singkat recipe di sini</string>
    <string name="category">Category</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="input_recipe_title">Enter your recipe title</string>
    <string name="input_ingredients">Enter your ingredients</string>
    <string name="input_steps">Enter your recipe procedure</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_recipes">My Recipe</string>
    <string name="user_name">User Name</string>
    <string name="searchbar_hint">Search</string>
    <string name="sort_by">Sort by</string>

    <string name="submit">Submit</string>
    <string name="add_recipe">Add New Recipe</string>
    <string name="recipe">Recipe</string>
    <string name="jumlah_like">Jumlah Like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="edit_your_name">Edit name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_password">Enter Password</string>
    <string name="app_theme">App Theme</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_msg2">Let\'s set up your account, \nit wont take long!</string>
    <string name="signup_msg1">Create an Account</string>
    <string name="signin_msg1">Hello,</string>
    <string name="signin_msg2">Welcome to EZEats!</string>
    <string name="signin_msg3">— Or —</string>
    <string name="signin_google">Sign In With Google</string>
    <string name="signin_no_account">Don\'t have an account?</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_msg3">Already have an account?</string>
    <string name="forgot_password_msg1">Let\'s reset your password!</string>
    <string name="forgot_password_msg2">Enter your account\'s email</string>
    <string name="forgot_password_msg3">We will send you a verification email, \nplease check your email inbox.</string>
    <string name="gambar_resep">Gambar Resep</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="egg">Egg</string>
    <string name="tofu">Tofu</string>
    <string name="fish">Fish</string>
    <string name="tempe">Tempe</string>
    <string name="lamb">Lamb</string>
    <string name="num_step">Steps n</string>
    <string name="langkah_memasak">langkah memasak</string>
    <string name="all">All</string>
    <string name="categories">categories</string>
    <string name="liked_recipe">Liked Recipe</string>
    <string name="latest">Latest</string>
    <string name="most_liked">Most Liked</string>
    <string name="short_desc">Shor Descripton</string>

</resources>