<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/appThemeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/app_theme"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"/>

    </LinearLayout>

</LinearLayout>