<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSignUp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/signup_msg1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSignUp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/signup_msg2"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignUp1" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignUp2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail">

            <com.example.ezeats.customui.EmailEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_email"
                android:paddingLeft="14dp"
                android:inputType="textEmailAddress"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.example.ezeats.customui.PasswordEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_password"
                android:paddingLeft="14dp"
                android:textSize="12sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/poppins"
            android:text="@string/confirm_password"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.example.ezeats.customui.PasswordEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins"
                android:hint="@string/enter_password"
                android:paddingLeft="14dp"
                android:textSize="12sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textStyle="bold"
            app:circularflow_radiusInDP="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/button_register"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvSignUp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/signup_msg3"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_in"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>