<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountmanager.ForgetPasswordActivity">

    <TextView
        android:id="@+id/tvForgotPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password_question"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password_msg3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword1" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password_msg2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailForgetPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <EditText
            android:id="@+id/etForgotPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnForgotPasswordSubmit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:circularflow_radiusInDP="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmailForgetPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>