<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchRecipe.SearchFragment">
    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/searchbar_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/searchbar_hint"
        app:layout_anchor="@id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_sortby"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar">

        <TextView
            android:id="@+id/tvMyRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sort_by"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.ezeats.customui.categoryButton
            android:id="@+id/btnLatest"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:padding="3dp"
            android:layout_marginStart="12dp"
            android:text="@string/latest"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <com.example.ezeats.customui.categoryButton
            android:id="@+id/btnMostLiked"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:padding="3dp"
            android:layout_marginStart="12dp"
            android:text="@string/most_liked"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_sortby"
        app:spanCount="1"
        tools:listitem="@layout/long_recipe" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>